# haskell-dsl-example

./: .gitignore
ad/: Forward.hs  revad_atomicmodifyioref.hs  revad_manual.hs  revad_st.hs  revad_unsafeperformio.hs
llvm/: CHANGELOG.md  LICENSE  cabal.project  haskell-dsl-llvm.cabal
llvm/app/: Main.hs
llvm/benchmark/: Main.hs
llvm/loop/: Main.hs
llvm/pp/: Main.hs
llvm/src/: Codegen.hs  Exp.hs  ExpS.hs  LoopCodegen.hs  MyLib.hs
simd/: CHANGELOG.md  haskell-dsl-simd.cabal
simd/app/: Main.hs
simd/benchmark/: Main.hs
simd/src/: SIMD.hs
stablename/: ExpS.hs  Simple.hs
