cabal-version:      3.0
name:               haskell-dsl-llvm
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , transformers
      , unordered-containers
    hs-source-dirs:   src
    default-language: GHC2021

executable haskell-dsl-llvm
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1
      , haskell-dsl-llvm
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , containers
      , bytestring

    hs-source-dirs:   app
    default-language: GHC2021

test-suite haskell-dsl-llvm-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        haskell-dsl-llvm
