cabal-version:      3.0
name:               haskell-dsl-llvm
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Exp
                      ExpS
                      Codegen
                      LoopCodegen
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21
      , llvm-hs-pure ^>=15.0.0
      , transformers ^>= 0.6.1.2
      , unordered-containers ^>= 0.2.20
      , containers ^>= 0.7
      , bytestring ^>= 0.12.1.0
    hs-source-dirs:   src
    default-language: GHC2021

executable example-pp
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21
      , haskell-dsl-llvm
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , containers ^>= 0.7
      , bytestring ^>= 0.12.1.0
      , deepseq >= 1.4.8.1 && <1.6

    hs-source-dirs:   pp
    default-language: GHC2021

executable example-run
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21
      , haskell-dsl-llvm
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , containers ^>= 0.7
      , bytestring ^>= 0.12.1.0
      , deepseq >= 1.4.8.1 && <1.6

    hs-source-dirs:   app
    default-language: GHC2021

executable example-run-loop
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21
      , haskell-dsl-llvm
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , containers ^>= 0.7
      , bytestring ^>= 0.12.1.0
      , deepseq >= 1.4.8.1 && <1.6
      , vector ^>= 0.13.2.0

    hs-source-dirs:   loop
    default-language: GHC2021

benchmark llvm-benchmark
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21
      , haskell-dsl-llvm
      , llvm-hs ^>=15.0.0
      , llvm-hs-pure ^>=15.0.0
      , containers ^>= 0.7
      , bytestring ^>= 0.12.1.0
      , deepseq >= 1.4.8.1 && <1.6
      , vector ^>= 0.13.2.0
      , criterion ^>= 1.6.4.0

    hs-source-dirs:   benchmark
    default-language: GHC2021

test-suite haskell-dsl-llvm-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18.0.0 && <4.21
      , haskell-dsl-llvm
