cabal-version:      3.0
name:               haskell-dsl-simd
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SIMD
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.22
      , vector ^>= 0.13.2.0
    hs-source-dirs:   src
    default-language: GHC2021

executable haskell-dsl-simd
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.22
      , haskell-dsl-simd
      , vector ^>= 0.13.2.0

    hs-source-dirs:   app
    default-language: GHC2021

benchmark simd-benchmark
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.22
      , haskell-dsl-simd
      , vector ^>= 0.13.2.0
      , criterion ^>= 1.6.4.0

    hs-source-dirs:   benchmark
    default-language: GHC2021

test-suite haskell-dsl-simd-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18.0.0 && <4.22,
        haskell-dsl-simd
